# peyman_practice

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
src/: todo.py
src/peyman_practice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_todo.py
