[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "peyman_practice"
version = "0.1.0"
description = "A simple Todo CLI app in Python for practice"
readme = "README.md"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flake8>=6.0",
    "pre-commit>=3.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.flake8]
max-line-length = 88
exclude = ["venv", "__pycache__"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
